<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>better.anticheat</groupId>
    <artifactId>parent</artifactId>
    <packaging>pom</packaging>
    <version>1.0.0</version>


    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>io.github.revxrsal</groupId>
                <artifactId>lamp.common</artifactId>
                <version>${lamp.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.revxrsal</groupId>
                <artifactId>lamp.bukkit</artifactId>
                <version>${lamp.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.revxrsal</groupId>
                <artifactId>lamp.brigadier</artifactId>
                <version>${lamp.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.revxrsal</groupId>
                <artifactId>lamp.sponge</artifactId>
                <version>${lamp.version}</version>
                <scope>compile</scope>
            </dependency>
            <dependency>
                <groupId>io.github.revxrsal</groupId>
                <artifactId>lamp.velocity</artifactId>
                <version>${lamp.version}</version>
                <scope>compile</scope>
            </dependency>

            <dependency>
                <groupId>com.github.haifengl</groupId>
                <artifactId>smile-core</artifactId>
                <version>4.4.0</version>
                <exclusions>
                    <exclusion>
                        <groupId>org.duckdb</groupId>
                        <artifactId>duckdb_jdbc</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>

            <dependency>
                <groupId>com.github.haifengl</groupId>
                <artifactId>smile-plot</artifactId>
                <version>4.4.0</version>
                <exclusions>
                    <exclusion>
                        <groupId>org.duckdb</groupId>
                        <artifactId>duckdb_jdbc</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>org.bytedeco</groupId>
                        <artifactId>openblas</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>

            <dependency>
                <groupId>com.alibaba.fastjson2</groupId>
                <artifactId>fastjson2</artifactId>
                <version>2.0.57</version>
            </dependency>
            <dependency>
                <groupId>com.github.luben</groupId>
                <artifactId>zstd-jni</artifactId>
                <version>1.5.6-7</version>
            </dependency>

            <dependency>
                <groupId>wtf.spare</groupId>
                <artifactId>sparej</artifactId>
                <version>1.0.1</version>
            </dependency>

            <dependency>
                <groupId>org.apache.fory</groupId>
                <artifactId>fory-core</artifactId>
                <version>0.11.2</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <modules>
        <module>core</module>
        <module>spigot</module>
        <module>sponge</module>
        <module>paper</module>
        <module>models</module>
        <module>velocity</module>
        <module>cookies</module>
        <module>distribution</module>
    </modules>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <lamp.version>4.0.0-rc.12</lamp.version>
        <velocity.version>3.4.0-SNAPSHOT</velocity.version>
    </properties>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>3.4.1</version>
                <executions>
                    <execution>
                        <id>enforce-maven</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireMavenVersion>
                                    <version>3.6.3</version>
                                </requireMavenVersion>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>